Agragado jumbotron, descripción y lista de hoteles

--- a/index.html
+++ b/index.html
@@ -8,10 +8,61 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
+    <title>Hoteles</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron">
+        <h1 class="display-4">Bienvenido a hoteles</h1>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <p class="lead"><B>Bajos precios:</B> Los mejores precios en el mercado los encuentra aquí</p>
+        </div>
+        <div class="col-4"><p class="lead">
+          <b>Calidad:</b> Ofrecemos hoteles con las mejores calificaciones de los usuarios</p></div>
+        <div class="col-4">
+          <p class="lead"><b>Seguridad:</b> Todos los tramites serán supervisados para tu seguridad</p>
+        </div>
+      </div><br><hr>
+      <div class="row">
+        <div class="col">
+          <div class="row">
+            <div class="col">
+              <h3>Título</h3>
+            </div>
+            <div class="col">
+              <p class="lead">Descripción</p>
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-info">Info</button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <h3>Título</h3>
+            </div>
+            <div class="col">
+              <p class="lead">Descripción</p>
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-info">Info</button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <h3>Título</h3>
+            </div>
+            <div class="col">
+              <p class="lead">Descripción</p>
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-info">Info</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
