--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <title>Hoteles</title>
   </head>
   <body>
     <div class="jumbotron">
-        <h1 class="display-4">Bienvenido a hoteles</h1>
+        <h1 class="display-4">Bienvenido a Hoteles</h1>
     </div>
     <div class="container">
       <div class="row">
@@ -24,46 +25,90 @@
         <div class="col-4">
           <p class="lead"><b>Seguridad:</b> Todos los tramites serán supervisados para tu seguridad</p>
         </div>
-      </div><br><hr>
-      <div class="row">
-        <div class="col">
-          <div class="row">
-            <div class="col">
-              <h3>Título</h3>
-            </div>
-            <div class="col">
-              <p class="lead">Descripción</p>
-            </div>
-            <div class="col">
-              <button type="button" class="btn btn-info">Info</button>
-            </div>
+      </div><hr>
+      <div class="d-flex flex-wrap flex-row-reverse">
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel de Sta. Marta</h4>
+            <p>Hotel ubicado en la 5ta, con servicios a la habitación y las tres comidas.</p>
           </div>
-          <div class="row">
-            <div class="col">
-              <h3>Título</h3>
-            </div>
-            <div class="col">
-              <p class="lead">Descripción</p>
-            </div>
-            <div class="col">
-              <button type="button" class="btn btn-info">Info</button>
-            </div>
+          <div>
+            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
           </div>
-          <div class="row">
-            <div class="col">
-              <h3>Título</h3>
-            </div>
-            <div class="col">
-              <p class="lead">Descripción</p>
-            </div>
-            <div class="col">
-              <button type="button" class="btn btn-info">Info</button>
-            </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel bahía</h4>
+            <p>Ubicado en la bahía de Sta. Marta, tenemos salida al mar y piscinas.</p>
+          </div>
+          <div>
+            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Rodadero</h4>
+            <p>Este es el mejor hotel del rodadero, con salida a la playa y
+              el mejor servicio a la habitación.</p>
+          </div>
+          <div>
+            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel bahía</h4>
+            <p>Ubicado en la bahía de Sta. Marta, tenemos salida al mar y piscinas.</p>
+          </div>
+          <div>
+            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Rodadero</h4>
+            <p>Este es el mejor hotel del rodadero, con salida a la playa y
+              el mejor servicio a la habitación.</p>
+          </div>
+          <div>
+            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Rodadero</h4>
+            <p>Este es el mejor hotel del rodadero, con salida a la playa y
+              el mejor servicio a la habitación.</p>
+          </div>
+          <div>
+            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
           </div>
         </div>
       </div>
     </div>
-
+    <hr>
+    <footer>
+      <div class="row">
+        <div class="col-sm-4 d-flex flex-column">
+          <a href="http://www.facebook.com">Facebook</a>
+          <a href="twitter.com">Twitter</a>
+          <a href="www.instagram.com">Instagram</a>
+        </div>
+        <div class="col-sm-4">
+          <address>
+            <h3>Oficina central</h3>
+            <p>Santa Marta</p>
+            <p>+57 3000000000</p> 
+            <p>contacto@hoteles.com</p>
+          </address>
+        </div>
+        <div class="col-sm-4 d-flex flex-column align-items-end">
+          <a href="http://www.facebook.com">Nosotros</a>
+          <a href="twitter.com">Terminos y condiciones</a>
+          <a href="www.instagram.com">Contacto</a>
+        </div>
+      </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
