--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <title>Hoteles</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a href="#" class="navbar-brand">Guía de Hoteles</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active"><a href="./index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="./about.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Términos y condiciones</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="jumbotron">
         <h1 class="display-4">Bienvenido a Hoteles</h1>
     </div>
