--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
 
     <title>Hoteles</title>
   </head>
@@ -48,7 +49,7 @@
             <p>Hotel ubicado en la 5ta, con servicios a la habitación y las tres comidas.</p>
           </div>
           <div>
-            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+            <button type="button" class="btn btn-info btn-reserve"><span class="oi oi-plus"></span>Reserva</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -57,7 +58,7 @@
             <p>Ubicado en la bahía de Sta. Marta, tenemos salida al mar y piscinas.</p>
           </div>
           <div>
-            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+            <button type="button" class="btn btn-info btn-reserve"><span class="oi oi-plus"></span>Reserva</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -67,7 +68,7 @@
               el mejor servicio a la habitación.</p>
           </div>
           <div>
-            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+            <button type="button" class="btn btn-info btn-reserve"><span class="oi oi-plus"></span>Reserva</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -76,7 +77,7 @@
             <p>Ubicado en la bahía de Sta. Marta, tenemos salida al mar y piscinas.</p>
           </div>
           <div>
-            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+            <button type="button" class="btn btn-info btn-reserve"><span class="oi oi-plus"></span>Reserva</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -86,7 +87,7 @@
               el mejor servicio a la habitación.</p>
           </div>
           <div>
-            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+            <button type="button" class="btn btn-info btn-reserve"><span class="oi oi-plus"></span>Reserva</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -96,7 +97,7 @@
               el mejor servicio a la habitación.</p>
           </div>
           <div>
-            <button type="button" class="btn btn-info btn-reserve">Reserva</button>
+            <button type="button" class="btn btn-info btn-reserve"><span class="oi oi-plus"></span>Reserva</button>
           </div>
         </div>
       </div>
@@ -112,9 +113,9 @@
         <div class="col-sm-4">
           <address>
             <h3>Oficina central</h3>
-            <p>Santa Marta</p>
-            <p>+57 3000000000</p> 
-            <p>contacto@hoteles.com</p>
+            <p><span class="oi oi-home footer-address-icon"></span>Santa Marta</p>
+            <p><span class="oi oi-phone footer-address-icon"></span>+57 3000000000</p> 
+            <p><span class="oi oi-envelope-closed footer-address-icon"></span>contacto@hoteles.com</p>
           </address>
         </div>
         <div class="col-sm-4 d-flex flex-column align-items-end">
