Navegabilidad y barra de navegación

--- a/prices.html
+++ b/prices.html
@@ -21,20 +21,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="./about.html" class="nav-link">Nosotros</a></li>
-          <li class="nav-item"><a href="./prices.html" class="nav-link">Precios</a></li>
+          <li class="nav-item"><a href="./about.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item active"><a href="./prices.html" class="nav-link">Precios</a></li>
           <li class="nav-item"><a href="./terms_and_conditios.html" class="nav-link">Términos y condiciones</a></li>
           <li class="nav-item"><a href="./contact.html" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
     <div class="jumbotron">
-        <h1 class="display-4">Nosotros</h1>
+        <h1 class="display-4">Precios</h1>
     </div>
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+        <li class="breadcrumb-item active" aria-current="page">Precios</li>
       </ol>
     </nav>
     <div class="container">
@@ -54,12 +54,12 @@ Duis nec erat laoreet, malesuada turpis sit amet, vestibulum leo. Fusce vestibul
           <a href="www.instagram.com">Instagram</a>
         </div>
         <div class="col-sm-4">
-          <address>
-            <h3>Oficina central</h3>
-            <p><span class="oi oi-home footer-address-icon"></span>Santa Marta</p>
-            <p><span class="oi oi-phone footer-address-icon"></span>+57 3000000000</p> 
-            <p><span class="oi oi-envelope-closed footer-address-icon"></span>contacto@hoteles.com</p>
-          </address>
+            <address>
+                <h3>Oficina central</h3>
+                <p><span class="oi oi-home footer-address-icon"></span>Santa Marta</p>
+                <p><span class="oi oi-phone footer-address-icon"></span>+57 3000000000</p> 
+                <p><span class="oi oi-envelope-closed footer-address-icon"></span>contacto@hoteles.com</p>
+            </address>
         </div>
         <div class="col-sm-4 d-flex flex-column align-items-end">
           <a href="http://www.facebook.com">Nosotros</a>
