--- a/about.html
+++ b/about.html
@@ -38,12 +38,48 @@
       </ol>
     </nav>
     <div class="container">
-      <h3>Lorem Ipsum</h3>
-      <span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget est ut quam pulvinar ullamcorper. Nullam et nisl porttitor, dapibus diam ut, blandit tortor. Aliquam erat volutpat. Fusce ut purus quis lectus interdum ultrices sit amet id est. Vestibulum blandit erat ut auctor molestie. Fusce sit amet malesuada magna. Sed vitae turpis eget risus consectetur ullamcorper imperdiet nec lectus. Sed laoreet est velit, nec rhoncus justo pulvinar quis. Nunc ullamcorper suscipit congue.
-
-Duis nec erat laoreet, malesuada turpis sit amet, vestibulum leo. Fusce vestibulum nulla sed massa vestibulum, id porta lectus vestibulum. Maecenas sit amet est maximus, consequat erat eu, efficitur purus. Ut porttitor egestas lectus, posuere ullamcorper metus fermentum in. Suspendisse dolor ligula, aliquam eget semper sit amet, euismod eu leo. Suspendisse potenti. Nunc elementum blandit scelerisque. Praesent eleifend sem placerat nisl lacinia, eu rutrum felis sollicitudin. Cras laoreet sapien arcu, vel convallis arcu venenatis non. Aenean quam massa, feugiat nec nulla varius, porta maximus urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
-      </span>
+      <h1>Dejame tu comentario</h1>
+      <form action="">
+        <div class="form-row">
+          <div class="form-group col-sm-6">
+            <label for="nombre">Nombre</label>
+            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingrese su nombre">
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="apellido">Apellido</label>
+            <input type="text" class="form-control" name="apellido" id="apellido" placeholder="Ingrese su apellido">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" name="email" id="email" placeholder="Ingrese su Email">
+        </div>
+        <div class="form-row">
+          <div class="form-group col-sm-6">
+            <label for="domicilio">Domicilio</label>
+            <input type="text" class="form-control" name="domicilio" id="domicilio" placeholder="Ingrese su dirección">
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="departamento">Departamento</label>
+            <select class="form-control" name="departamento" id="departamento">
+              <option selected>Bogotá D. C.</option>
+              <option >Magdalena</option>
+              <option >Antioquia</option>
+              <option >Bolivar</option>
+              <option >Atlantico</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="comentario">Comentario</label>
+          <textarea class="form-control" name="comentario" id="comentario" rows="7"></textarea>
+        </div>
+        <div class="form-group">
+          <input class="form-check-input" type="checkbox" name="gridCheck" id="gridCheck">
+          <label class="form-check-label" for="gridCheck">Quiero recibir información</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
     </div>
     <hr>
     <footer>
