Tabla de precios

--- a/prices.html
+++ b/prices.html
@@ -31,19 +31,63 @@
     <div class="jumbotron">
         <h1 class="display-4">Precios</h1>
     </div>
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Precios</li>
-      </ol>
-    </nav>
     <div class="container">
-      <h3>Lorem Ipsum</h3>
-      <span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget est ut quam pulvinar ullamcorper. Nullam et nisl porttitor, dapibus diam ut, blandit tortor. Aliquam erat volutpat. Fusce ut purus quis lectus interdum ultrices sit amet id est. Vestibulum blandit erat ut auctor molestie. Fusce sit amet malesuada magna. Sed vitae turpis eget risus consectetur ullamcorper imperdiet nec lectus. Sed laoreet est velit, nec rhoncus justo pulvinar quis. Nunc ullamcorper suscipit congue.
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Precios</li>
+        </ol>
+      </nav>
 
-Duis nec erat laoreet, malesuada turpis sit amet, vestibulum leo. Fusce vestibulum nulla sed massa vestibulum, id porta lectus vestibulum. Maecenas sit amet est maximus, consequat erat eu, efficitur purus. Ut porttitor egestas lectus, posuere ullamcorper metus fermentum in. Suspendisse dolor ligula, aliquam eget semper sit amet, euismod eu leo. Suspendisse potenti. Nunc elementum blandit scelerisque. Praesent eleifend sem placerat nisl lacinia, eu rutrum felis sollicitudin. Cras laoreet sapien arcu, vel convallis arcu venenatis non. Aenean quam massa, feugiat nec nulla varius, porta maximus urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
-      </span>
+      <div class="table-responsive">
+        <table class="table">
+          <thead class="thead-dark">
+            <th>Calidad</th>
+            <th>Santa Marta</th>
+            <th>Barranquilla</th>
+            <th>Bogotá</th>
+            <th>Medellín</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td><span class="oi oi-star"></span></td>
+              <td>us$ 15</td>
+              <td>us$ 16</td>
+              <td>us$ 16</td>
+              <td>us$ 15</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>us$ 20</td>
+              <td>us$ 22</td>
+              <td>us$ 23</td>
+              <td>us$ 20</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>us$ 40</td>
+              <td>us$ 42</td>
+              <td>us$ 53</td>
+              <td>us$ 50</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>us$ 80</td>
+              <td>us$ 82</td>
+              <td>us$ 93</td>
+              <td>us$ 90</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>us$ 100</td>
+              <td>us$ 102</td>
+              <td>us$ 103</td>
+              <td>us$ 100</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
     </div>
     <hr>
     <footer>
